@@ -27,7 +27,9 @@ from StringIO import StringIO
 from bzrlib import (
     branch as _mod_branch,
     bzrdir,
+    config,
     errors,
+    trace,
     urlutils,
     )
 from bzrlib.branch import (
@@ -280,6 +282,22 @@ class TestBranch6(TestCaseWithTransport):
 
     def test_light_checkout_with_references(self):
         self.do_checkout_test(lightweight=True)
+
+    def test_set_push(self):
+        branch = self.make_branch('source', format='dirstate-tags')
+        branch.get_config().set_user_option('push_location', 'old',
+            store=config.STORE_LOCATION)
+        warnings = []
+        def warning(*args):
+            warnings.append(args[0] % args[1:])
+        _warning = trace.warning
+        trace.warning = warning
+        try:
+            branch.set_push_location('new')
+        finally:
+            trace.warning = _warning
+        self.assertEqual(warnings[0], 'Value "new" is masked by "old" from '
+                         'locations.conf')
 
 class TestBranchReference(TestCaseWithTransport):
     """Tests for the branch reference facility."""
